fixed issues on iOS - NavBar moving down entire site

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   width: 100%;
   min-height: 75vh;
+  min-height: 75svh;
 }
 
 .hero .text-section {
